# routes/grocery.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const groceryController = require('../controller/grocery');
 
 router.get('/', groceryController.getAll);
+router.get('/:id', groceryController.getOne);
 
 
 module.exports = router;
