# routes/library.js
@@ -3,5 +3,6 @@ const router = express.Router();
 const libraryController = require('../controller/library');
 
 router.get('/', libraryController.getAll);
+router.get('/:id', libraryController.getOne);
 
 module.exports = router;
