# routes/users.js
@@ -3,6 +3,6 @@ const router = express.Router();
 const userController = require('../controller/users');
 
 router.get('/', userController.getAll);
-
+router.get('/:id', userController.getOne);
 
 module.exports = router;
